fix(spaces): fix alignment of my spaces list item contents (#2841)

--- a/src/app/profile/my-spaces/my-spaces-item/my-spaces-item.component.less
+++ b/src/app/profile/my-spaces/my-spaces-item/my-spaces-item.component.less
@@ -1,6 +1,6 @@
 @import (reference) '../../../../assets/stylesheets/shared/osio.less';
 
-.my-spaces-page {
+.my-spaces-item {
   .avatar {
     border-left: 1px solid;
     border-left-color: @color-pf-black-300;
@@ -10,17 +10,6 @@
       border-radius: 50%;
       height: 25px;
       width: 25px;
-    }
-  }
-  .list-pf-main-content {
-    align-items: left;
-    flex-direction: column;
-  }
-  .list-pf:not(.list-pf-stacked) .list-pf-main-content {
-    @media (min-width: @screen-md-min) {
-      & > * + * {
-        margin-left: 0;
-      }
     }
   }
 }
