--- a/src/app/profile/my-spaces/my-spaces.component.less
+++ b/src/app/profile/my-spaces/my-spaces.component.less
@@ -4,10 +4,6 @@
   .blank-slate-pf {
     margin-top: 20px;
   }
-  .space-item {
-    display: inline-flex;
-    width: 100%;
-  }
   .pfng-list-heading {
     background-color: @color-pf-black-200 !important; /* stylelint-disable-line declaration-no-important */
   }
